--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-slick": "^0.23.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
